--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,11 @@ html {
 .text-in-white{
     color: white;
 }
+.text-in-black{
+    color: black;
+}
 #footer-section {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(../images/cover-bubble-dark.svg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(../images/computer-robot-background.jpg);
     background-position: center center, center center;
     background-size: cover, cover;
     background-repeat: repeat, repeat;
